# CCDC-Service-Test

./: Cargo.toml  README.md  Rocket.toml
src/: ip_pool.rs  main.rs
static/: index.html  index.js
