[package]
name = "service_test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.5.0-rc.1", features = ["json"] }
serde = "*"
chrono = { version = "0.4.19", features = ["serde"] }
reqwest = "0.11.9"
#lettre = "0.9.6"
trust-dns-client = "0.20.4"
rand = "0.8.5"
